# sparv-sbx-superlim

./: README.md  pyproject.toml
examples/valmanifest/: config.yaml
examples/valmanifest/source/energy/: fp-2014-v.txt  l-2018-v.txt  l-2022-v.txt  mp-2014-v.txt  mp-2018-v.txt  mp-2022-v.txt
examples/valmanifest/source/migration/: all-2014-v-migration.txt  m-2018-v-migration.txt  m-2022-v-migration.txt  sd-2014-v-migration.txt  sd-2018-v-migration.txt  sd-2022-v-migration.txt
sbx_superlim/: __init__.py  annotators.py  common.py  exporters.py  helpers.py
sbx_superlim/annotators/: absabank_imm.py  argumentation_sent.py  dalaj_ged.py  swenli.py
sparv-sbx-superlim/: README.md  pyproject.toml
sparv-sbx-superlim/sbx_superlim/: __init__.py  annotators.py  common.py  exporters.py  helpers.py  superlim.py
